# manifest

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Makefile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml
examples/: langchain_chatgpt.ipynb  manifest_async.py  manifest_azure.ipynb  manifest_chatgpt.ipynb  manifest_connection_pool.ipynb  manifest_diffusers.ipynb  manifest_embedding.ipynb  manifest_google.ipynb  manifest_helm.ipynb  manifest_service.ipynb  manifest_streaming.ipynb  manifest_together.ipynb
manifest/: __init__.py  manifest.py  prompt.py  request.py  response.py  session.py
manifest/api/: __init__.py  app.py  response.py
manifest/api/models/: __init__.py  diffuser.py  huggingface.py  huggingface_model.py  model.py  sentence_transformer.py  zoo.py
manifest/caches/: __init__.py  array_cache.py  cache.py  noop.py  postgres.py  redis.py  serializers.py  sqlite.py
manifest/clients/: __init__.py  ai21.py  azureopenai.py  azureopenai_chat.py  chatgpt.py  client.py  cohere.py  crfm.py  diffuser.py  diffusers.py  dummy.py  google.py  google_chat.py  helm.py  huggingface.py  huggingface_embedding.py  openai.py  openai_chat.py  openai_embedding.py  openaichat.py  opt.py  response.py  toma.py  toma_diffuser.py  zoo.py
manifest/connections/: __init__.py  client_pool.py  scheduler.py
manifest/scratch/: 10-30_clip.ipynb  10-30_embed.py
tests/: conftest.py  test_array_cache.py  test_cache.py  test_client.py  test_client_pool.py  test_huggingface_api.py  test_manifest.py  test_prompt.py  test_request.py  test_response.py  test_scheduler.py  test_serializer.py  test_session.py
tests/clients/: test_client.py  test_response.py
web_app/: README.md  __init__.py  main.py  schemas.py
